--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,19 @@ body {
 img {
   max-width: 100%; }
 
+a {
+  text-decoration: none;
+  color: #000; }
+
+a:hover {
+  color: #b0b0b0; }
+
+a:hover img, button:hover {
+  opacity: 0.50;
+  filter: alpha(opacity=50);
+  -ms-filter: "alpha( opacity=50 )";
+  -moz-opacity: 0.50; }
+
 .sp_logo {
   margin: 30px auto 5px auto;
   text-align: center; }
